--- a/github/Cargo.toml
+++ b/github/Cargo.toml
@@ -17,4 +17,6 @@ repository = "https://github.com/xairaven/x-followers"
 workspace = true
 
 [dependencies]
+serde_json = "1.0.145"
+reqwest = { version = "0.12.23", features = ["blocking", "json"] }
 thiserror = "2.0.17"
