--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -17,6 +17,6 @@ repository = "https://github.com/xairaven/x-followers"
 workspace = true
 
 [dependencies]
-serde_json = "1.0.145"
+serde = { version = "1.0.228", features = ["derive"] }
 reqwest = { version = "0.12.23", features = ["blocking", "json"] }
 thiserror = "2.0.17"
