--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -18,5 +18,6 @@ workspace = true
 
 [dependencies]
 serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
 reqwest = { version = "0.12.23", features = ["blocking", "json"] }
 thiserror = "2.0.17"
